feat: add modal and CSS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <meta name="description" content="" />
+    <script src="https://kit.fontawesome.com/f00121b28d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/style.css" />
     <script src="./assets/scripts/script.js" type="module"></script>
   </head>
