fix: console log to explore why I can't open file explorer

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <form id="modal-edit-work-form" method="post" action="#">
           <div id="modal-edit-new-photo" class="modal-content-new-photo">
             <i id="photo-add-icon" class="fa-regular fa-image"></i>
-            <label id="new-image">+ Ajouter photo</label>
+            <label  id="new-image" for="form-image">+ Ajouter photo</label>
             <input id="form-image" type="file" name="image" accept="image/*, .jpg, .jpeg, .png" required>
             <p id="photo-size">jpg, png : 4mo max</p>
           </div>
