--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       rel="stylesheet"
     />
     <meta name="description" content="" />
-    <script src="https://kit.fontawesome.com/f00121b28d.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f00121b28d.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/style.css" />
     <script src="./assets/scripts/script.js" type="module"></script>
   </head>
@@ -19,7 +22,11 @@
     <header>
       <div id="top-bar" class="top-bar-design">
         <ul>
-          <li><a href="#"><i class="fa-solid fa-pen-to-square"></i>Mode édition</a></li>
+          <li>
+            <a href="#"
+              ><i class="fa-solid fa-pen-to-square"></i>Mode édition</a
+            >
+          </li>
         </ul>
       </div>
       <div class="nav-for-user">
@@ -32,7 +39,7 @@
               <a class="only-guest" href="login.html">login</a>
               <a id="nav-logout" class="only-admin" href="#">logout</a>
             </li>
-            <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+            <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
           </ul>
         </nav>
       </div>
@@ -40,46 +47,55 @@
     <main>
       <section id="introduction">
         <figure>
-          <img src="./assets/images/sophie-bluel.png" alt="">
+          <img src="./assets/images/sophie-bluel.png" alt="" />
         </figure>
         <article>
           <h2>Designer d'espace</h2>
-          <p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison
-            finale du chantier.</p>
-          <p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les
-            couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du
-            chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-          <p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG,
-            décorateur(trice)</p>
+          <p>
+            Je raconte votre histoire, je valorise vos idées. Je vous accompagne
+            de la conception à la livraison finale du chantier.
+          </p>
+          <p>
+            Chaque projet sera étudié en commun, de façon à mettre en valeur les
+            volumes, les matières et les couleurs dans le respect de l’esprit
+            des lieux et le choix adapté des matériaux. Le suivi du chantier
+            sera assuré dans le souci du détail, le respect du planning et du
+            budget.
+          </p>
+          <p>
+            En cas de besoin, une équipe pluridisciplinaire peut-être constituée
+            : architecte DPLG, décorateur(trice)
+          </p>
         </article>
       </section>
       <section id="portfolio">
         <div id="space-only-admin" class="container-only-admin">
           <h2>Mes Projets</h2>
           <div>
-            <a id="update-works" class="only-admin update-btn" href="#modal"><i
-                class="fa-solid fa-pen-to-square"></i>modifier</a>
+            <a id="update-works" class="only-admin update-btn" href="#modal"
+              ><i class="fa-solid fa-pen-to-square"></i>modifier</a
+            >
           </div>
         </div>
         <div id="all-filters" class="filters"></div>
         <div class="gallery"></div>
-        </div>
+        <!-- </div> -->
       </section>
       <section id="contact">
         <h2>Contact</h2>
         <p>Vous avez un projet ? Discutons-en !</p>
         <form action="#" method="post">
           <label for="name">Nom</label>
-          <input type="text" name="name" id="name">
+          <input type="text" name="name" id="name" />
           <label for="email">Email</label>
-          <input type="email" name="email" id="email">
+          <input type="email" name="email" id="email" />
           <label for="message">Message</label>
           <textarea name="message" id="message" cols="30" rows="10"></textarea>
-          <input type="submit" value="Envoyer">
+          <input type="submit" value="Envoyer" />
         </form>
       </section>
     </main>
-  
+
     <footer>
       <nav>
         <ul>
@@ -87,40 +103,63 @@
         </ul>
       </nav>
     </footer>
-    <div id="modal" class="modal-overlay" aria-hidden="true" role="dialog" aria-labelledby="title-modal-overlay">
+    <div
+      id="modal"
+      class="modal-overlay"
+      aria-hidden="true"
+      role="dialog"
+      aria-labelledby="title-modal-overlay"
+    >
       <div id="modal-works" class="modal-gallery">
-        <a id="button-to-close-first-window" href="#" class="modal-close"><i class="fa-solid fa-xmark"></i></a>
+        <a id="button-to-close-first-window" href="#" class="modal-close"
+          ><i class="fa-solid fa-xmark"></i
+        ></a>
         <h3 id="title-modal-overlay" class="modal-title">Galerie photo</h3>
         <div class="modal-content"></div>
-        <hr>
+        <hr />
         <div class="container-modal-add">
-          <button id="modal-edit-add" class="modal-add">Ajouter une photo</button>
+          <button id="modal-edit-add" class="modal-add">
+            Ajouter une photo
+          </button>
         </div>
       </div>
       <div id="modal-edit" class="modal-edit-work">
         <div class="container-for-icon-in-second-window-of-modal">
-          <a id="arrow-return" href="#"><i class="fa-solid fa-arrow-left"></i></a>
-          <a id="button-to-close-second-window" href="#"><i class="fa-solid fa-xmark"></i></a>
+          <a id="arrow-return" href="#"
+            ><i class="fa-solid fa-arrow-left"></i
+          ></a>
+          <a id="button-to-close-second-window" href="#"
+            ><i class="fa-solid fa-xmark"></i
+          ></a>
         </div>
         <h3 class="modal-title">Ajout photo</h3>
-        <form id="modal-edit-work-form" method="post" action="#">
+        <form id="modal-edit-work-form" method="post">
           <div id="modal-edit-new-photo" class="modal-content-new-photo">
             <i id="photo-add-icon" class="fa-regular fa-image"></i>
-            <label  id="new-image" for="form-image">+ Ajouter photo</label>
-            <input id="form-image" type="file" name="image" accept="image/*, .jpg, .jpeg, .png" required>
+            <label id="new-image" for="form-image">+ Ajouter photo</label>
+            <input
+              id="form-image"
+              type="file"
+              name="image"
+              accept="image/*, .jpg, .jpeg, .png"
+              required
+            />
             <p id="photo-size">jpg, png : 4mo max</p>
           </div>
           <div class="modal-content-new-category-title">
             <label for="form-title">Titre</label>
-            <input type="text" name="title" id="form-title" value="" required>
+            <input type="text" name="title" id="form-title" value="" required />
             <label for="form-category">Catégorie</label>
-            <select class="choice-category" id="form-category" required>
-              <option value=""></option>
-            </select>
-            <hr class="border-in-second-window-of-modal">
-            <input type="submit" id="submit-new-work" value="Valider">
+            <select
+              class="choice-category"
+              id="form-category"
+              required
+            ></select>
+            <hr class="border-in-second-window-of-modal" />
+            <input type="submit" id="submit-new-work" value="Valider" />
           </div>
         </form>
       </div>
     </div>
-  </html>
+  </body>
+</html>
