fix: add proper button background color when active and inactive

--- a/login.html
+++ b/login.html
@@ -58,7 +58,12 @@
           <input type="email" name="email" id="email" required />
           <label class="logs" for="password">Mot de passe</label>
           <input type="password" name="password" id="password" required />
-          <input type="submit" id="submit" value="Se connecter" />
+          <input
+            type="submit"
+            id="submit"
+            value="Se connecter"
+            class="button-active"
+          />
           <a href="#">Mot de passe oublié</a>
         </form>
       </section>
