fix: improve authenticated featurs and better ux

--- a/index.html
+++ b/index.html
@@ -156,7 +156,12 @@
               required
             ></select>
             <hr class="border-in-second-window-of-modal" />
-            <input type="submit" id="submit-new-work" value="Valider" />
+            <input
+              type="submit"
+              id="submit-new-work"
+              value="Valider"
+              disabled
+            />
           </div>
         </form>
       </div>
